--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.datasource.url=jdbc:h2:mem:bankAccount
 spring.h2.console.enabled=true
 server.port=8088
+spring.graphql.graphiql.enabled=true
